--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -30,4 +30,5 @@ jobs:
       run: |
           cd /build
           grcov -s $GITHUB_WORKSPACE -o coverage.info --llvm --ignore "/*" --ignore-not-existing -t lcov /build
+          cat coverage.info
           bash <(curl -s https://codecov.io/bash) -f coverage.info
